Switched Java language level to 11